# High-Performance-Distributed-Rubik-s-Cube-Engine

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: CMakeLists.txt
backend/src/: CornerDB.cpp  CornerDB.h  RubiksCube.cpp  RubiksCube.h  Solver.cpp  Solver.h  main.cpp  wasm_bridge.cpp
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
server/: app.py  requirements.txt
